@@ -375,3 +375,4 @@ Entity中toVo区别是否忽略大小写
 21、ClassUil增加getConstructor方法，可匹配继承参数
 22、优化ClassPath路径转为绝对路径
 23、Direction增加方法从字符串转换（大小写不敏感）
+24、添加DigestUtil方法，用于md5、sha1等摘要算法，同时简化SecureUtil，其中md5、sha1方法调用DigestUtil
